# DealDecoder

./: .gitattributes  README.md  docker-compose.yml  index.html  main.py  package.json  pyproject.toml  test_stream.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: engine.py  llm.py  main.py
sample-data/: cart.csv  rules.csv
src/: App.jsx
src/components/: CsvUploader.jsx  DataTable.jsx  ErrorBanner.jsx
src/engine/: csvParser.js
