[project]
name = "dealdecoder-backend"
version = "0.1.0"
description = "FastAPI backend for DealDecoder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.5",
    "openai>=2.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
